<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.login.view.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/think_anim"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/thinking"
            app:lottie_speed="1" />

        <TextView
            android:id="@+id/sign_in_alert"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/existing_user_sign_in"
            android:textColor="@color/colorPrimary"
            android:textSize="33sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/think_anim"
            app:layout_constraintStart_toStartOf="@+id/textField"
            app:layout_constraintTop_toTopOf="@+id/think_anim"
            app:layout_constraintVertical_bias="0.571" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email_address"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="true"
            app:hintTextColor="@color/colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/think_anim">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress|textAutoComplete"
                android:textColor="@color/colorPrimaryVariant" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/colorPrimaryVariant"
            app:layout_constraintTop_toBottomOf="@id/textField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryVariant" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnSignIn"
            style="@style/ButtonSplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="35dp"
            android:paddingVertical="2dp"
            android:text="Sign in"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordField"
            app:spinning_bar_color="@color/colorAccent2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn">

        </LinearLayout>

        <TextView
            android:id="@+id/txtDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtDontHaveAccount"
            app:layout_constraintStart_toStartOf="@+id/txtDontHaveAccount"
            app:layout_constraintTop_toBottomOf="@+id/txtDontHaveAccount" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:weightSum="12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegister">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_weight="3"
                android:background="@color/black" />

            <TextView
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/use_other_methods"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="3"
                android:background="@color/black" />
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>